samples/_failures_safe/1761633038_74b2a0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b48f9709.c: In function ‘main’:
./samples/SAFE/__tmp_b48f9709.c:139:13: error: expected declaration or statement at end of input
  139 |             continue;
      |             ^~~~~~~~
./samples/SAFE/__tmp_b48f9709.c:139:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b48f9709.c:139:13: error: expected declaration or statement at end of input
